--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="user_details_title_phone">Phone</string>
+    <string name="user_details_title_location">Location</string>
+    <string name="user_details_title_registration_date">Registration date</string>
 </resources>
